--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
     <!-- Header + nav -->
     <header>
         <nav>
+            <!-- Wrapper -->
+            <div class="wrapper flex">
 
             <!-- Logo -->
-            <div class="logo">Agenzia Viaggi</div>
+            <div class="logo">
+                <img src="img/9472422_4119743.jpg" alt="logo">
+            </div>
 
             <!-- Menu -->
-            <div class="menu">
+            <div class="menu flex gap">
                 <ul>
                     <li><a href="home">Home</a></li>
                     <li><a href="abaut">About</a></li>
@@ -33,6 +37,7 @@
                 </ul>
             </div>
 
+            </div>
         </nav>
     </header>
 
