--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-    <!-- Header + nav -->
+    <!-- MILESTONE 1 Header + nav -->
     <header>
         <nav>
             <!-- Wrapper -->
@@ -40,6 +40,19 @@
             </div>
         </nav>
     </header>
+
+
+                <!-- MILESTONE 2 Jumbo -->
+                <section class="jumbo">
+                    <div class="cta">
+                        <h1>Viaggia con Noi!</h1>
+                        <div class="buttons">
+                            <div class="button button_1"><a href="#">Scopri di più</a></div>
+                            <div class="button button_2"><a href="#">Prenota un viaggio</a></div>
+                        </div>
+                    </div>
+
+                </section>
 
 
 
