--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <!-- Logo -->
             <div class="logo">
-                <img src="img/9472422_4119743.jpg" alt="logo">
+                <img src="img/logo agenzia viaggi.jpg" alt="logo">
             </div>
 
             <!-- Menu -->
@@ -55,6 +55,13 @@
                 </section>
 
 
+                <!-- MILESTONE 3 Sections -->
+                <section>
+                    <div class="img">
+                        <img src="img/9472422_4119743.jpg" alt="logo">
+                    </div>
+                    <div class="txt"></div>
+                </section>
 
 </body>
 
