--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <!-- Menu -->
             <div class="menu flex gap">
                 <ul>
-                    <li><a href="home">Home</a></li>
-                    <li><a href="abaut">About</a></li>
-                    <li><a href="contatti">Contatti</a></li>
+                    <li><a href="/home.css">Home</a></li>
+                    <li><a href="/about.css">About</a></li>
+                    <li><a href="/contatti.css">Contatti</a></li>
                 </ul>
             </div>
 
@@ -47,7 +47,7 @@
                     <div class="cta">
                         <h1>Viaggia con Noi!</h1>
                         <div class="buttons">
-                            <div class="button button_1"><a href="#">Scopri di più</a></div>
+                            <div class="button button_1"><a href="/Scopridipiù">Scopri di più</a></div>
                             <div class="button button_2"><a href="#">Prenota un viaggio</a></div>
                         </div>
                     </div>
@@ -91,9 +91,33 @@
                                 <p>Il Taj Mahal, che letteralmente tradotto significa “il palazzo della corona” o “la corona del palazzo”, è il nome dato ad una stupenda costruzione situata nella cittadina indiana di Agra, le cui origini sono molto incerte. Secondo la tradizione, l’opera sarebbe stata voluta dall’imperatore indiano Shah Jahan, per realizzare una delle promesse fatta alla moglie quando era ancora in vita. I lavori, che ebbero inizio nel 1632, si conclusero solo nel 1654 ed impiegarono il lavoro di tantissimi artigiani, alcuni dei quali provenienti dall’Europa e addirittura uno dall’Italia di nome Geronimo Veroneo, che si servirono di diversi materiali provenienti da ogni parte dell’India e dell’Asia. In totale si contano 28 diversi tipi di pietre preziose e semi preziose, incastonate nel marmo bianco come motivo decorativo dell’intera struttura.</p>
                             </div>
                             </div>
-                            </section>
-
+                            </section>                                  
             </main>
+
+            
+            <!-- MILESTONE 4  -->
+            <!-- Section_3 -->
+
+            <h2><a href="http://Scopridipiù">Scopri di più</h2></a>
+                <div class="container">
+                        <div class="card-container"> 
+                        
+                            <div class="card">
+                                    <img src="img/Gulf of Thailand, Thailand.jpg" alt="mare">            
+                            <h3 class="card-title">Mare</h3></div>
+
+                            <div class="card">
+                                <img src="img/desert.jpg" alt="deserto">            
+                            <h3 class="card-title">Deserto</h3></div>
+
+                            <div class="card">
+                                <img src="img/Amadablam Expedition, काठमाडौँ, Nepal.jpg" alt="deserto">            
+                            <h3 class="card-title">Montagna</h3></div>
+
+                        </div>
+                </div>
+
+
 
 </body>
 
